fix scrollbars

--- a/TitleBlocks/theme.css
+++ b/TitleBlocks/theme.css
@@ -16,9 +16,14 @@
     text-shadow: 0 0 5px #000;
     background-size: 10%;
     background-position: 90% 50%;
+    border-radius: 5px 5px 0 0;
     background-repeat: no-repeat;
 }
 
 .markup pre {
     border: none !important;
+}
+
+.markup .hljs {
+    border-radius: 5px;
 }
